[package]
name = "libp2p-quic"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "libp2p-quic is a noise based quic implementation for rust-libp2p."
repository = "https://github.com/ipfs-rust/libp2p-quic"
license = "ISC"

[dependencies]
anyhow = "1.0.40"
async-global-executor = "2.0.2"
async-io = "1.3.1"
bytes = "1.0.1"
fnv = "1.0.7"
futures = "0.3.13"
if-watch = "0.2.0"
libp2p = { version = "0.36.0", default-features = false }
parking_lot = "0.11.1"
quinn-proto = { version = "0.7.1", default-features = false, features = ["ring"] }
ring = "0.16.20"
snow = "0.7.2"
thiserror = "1.0.24"
tracing = "0.1.25"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.48"
libp2p = { version = "0.36.0", default-features = false, features = ["request-response"] }
log-panics = "2.0.0"
tracing-subscriber = "0.2.17"
